@@ -29,6 +29,7 @@ Version 1.3.13+svn:
      fixed in a later state. This could lead to some units not leveling 
      properly (bug #10304)
    * validate vector access for colours (bug #10622)
+   * added serveral fixes to compile with Sun Studio compiler (patch #911)
 
 Version 1.3.13:
  * campaigns:
